src/pages/tickets/detail/components/TicketMessages/Header.less
@import '~css/new/colors';

:local .header {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  overflow: visible;
  padding-bottom: .5em;
  transition: padding .16s ease-out;
  line-height: 26px;

  &.hasError div {
    color: @lightPurple2;
  }

  .headerDetails {
    display: flex;
    min-width: 200px;
    align-items: center;
    align-self: start;

    & > * {
      margin-right: 6px;
    }
  }

  .author {
    margin-right: .8em;
    font-weight: bold;
    flex-shrink: 0;
  }

  .isAgent {
    color: @blue;
  }

  .agentIcon {
    margin-right: 6px;
    vertical-align: text-bottom;
  }

  .sourceDetails {
    flex-shrink: 0;
  }

  .hiddenMessage {
    color: darken(@lightGrey, 8%);
  }

  .deletedMessage {
    color: darken(@ultraLightRed, 25%);
  }

  .intents {
    margin-left: auto;
    margin-right: 10px;
    .ticket-message:not(:hover) & {
        display: none;
    }
  }
}

